--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-/unity-environment/[Ll]ibrary/
-/unity-environment/[Tt]emp/
-/unity-environment/[Oo]bj/
-/unity-environment/[Bb]uild/
-/unity-environment/[Bb]uilds/
-/unity-environment/[Pp]ackages/
-/unity-environment/[Uu]nity[Pp]ackage[Mm]anager/
-/unity-environment/Assets/AssetStoreTools*
+/FlappyBird_ML/[Ll]ibrary/
+/FlappyBird_ML/[Tt]emp/
+/FlappyBird_ML/[Oo]bj/
+/FlappyBird_ML/[Bb]uild/
+/FlappyBird_ML/[Bb]uilds/
+/FlappyBird_ML/[Pp]ackages/
+/FlappyBird_ML/[Uu]nity[Pp]ackage[Mm]anager/
+/FlappyBird_ML/Assets/AssetStoreTools*
 
 # Tensorflow Model Info
 /models
